crates/tools/src/LSP/src/snapshots/kcl_language_server__inlay_hints__tests__assign_stmt_type_hint.snap
---
source: tools/src/LSP/src/inlay_hints.rs
expression: "format!(\"{:#?}\", res)"
---
Some(
    [
        InlayHint {
            position: Position {
                line: 0,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": int",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 0,
                                character: 1,
                            },
                            end: Position {
                                line: 0,
                                character: 1,
                            },
                        },
                        new_text: ": int",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 1,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": str",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 1,
                                character: 1,
                            },
                            end: Position {
                                line: 1,
                                character: 1,
                            },
                        },
                        new_text: ": str",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 2,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": str",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 2,
                                character: 1,
                            },
                            end: Position {
                                line: 2,
                                character: 1,
                            },
                        },
                        new_text: ": str",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 3,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": (int) -> int",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 3,
                                character: 1,
                            },
                            end: Position {
                                line: 3,
                                character: 1,
                            },
                        },
                        new_text: ": (int) -> int",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 10,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": Name",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 10,
                                character: 1,
                            },
                            end: Position {
                                line: 10,
                                character: 1,
                            },
                        },
                        new_text: ": Name",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 13,
                character: 2,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": Name",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 13,
                                character: 2,
                            },
                            end: Position {
                                line: 13,
                                character: 2,
                            },
                        },
                        new_text: ": Name",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 14,
                character: 4,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": any",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 14,
                                character: 4,
                            },
                            end: Position {
                                line: 14,
                                character: 4,
                            },
                        },
                        new_text: ": any",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 16,
                character: 1,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": str",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 16,
                                character: 1,
                            },
                            end: Position {
                                line: 16,
                                character: 1,
                            },
                        },
                        new_text: ": str",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 17,
                character: 2,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": [int | str]",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 17,
                                character: 2,
                            },
                            end: Position {
                                line: 17,
                                character: 2,
                            },
                        },
                        new_text: ": [int | str]",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 18,
                character: 2,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": {str:str}",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 18,
                                character: 2,
                            },
                            end: Position {
                                line: 18,
                                character: 2,
                            },
                        },
                        new_text: ": {str:str}",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 21,
                character: 3,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": number_multiplier(1Ki)",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 21,
                                character: 3,
                            },
                            end: Position {
                                line: 21,
                                character: 3,
                            },
                        },
                        new_text: ": number_multiplier(1Ki)",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
        InlayHint {
            position: Position {
                line: 23,
                character: 4,
            },
            label: LabelParts(
                [
                    InlayHintLabelPart {
                        value: ": (any, any, any) -> any",
                        tooltip: None,
                        location: None,
                        command: None,
                    },
                ],
            ),
            kind: Some(
                Type,
            ),
            text_edits: Some(
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 23,
                                character: 4,
                            },
                            end: Position {
                                line: 23,
                                character: 4,
                            },
                        },
                        new_text: ": (any, any, any) -> any",
                    },
                ],
            ),
            tooltip: None,
            padding_left: None,
            padding_right: None,
            data: None,
        },
    ],
)
